--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.11",
     "antd": "^5.4.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.11.2",
