--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "@types/react-redux": "^7.1.25",
+    "@types/redux-persist": "^4.3.1",
     "antd": "^5.4.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
@@ -26,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.3"
   },
