--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.4.2",
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.5",
+    "dotenv": "^16.0.3",
     "moment": "^2.29.4",
     "next": "latest",
     "postcss": "^8.4.21",
