--- a/package.json
+++ b/package.json
@@ -15,18 +15,17 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.3.5",
     "dotenv": "^16.0.3",
-    "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "next": "latest",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.1.8",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
