--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-jwt": "^1.1.8",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^3.3.1"
   },
